      root, and have Tor bind those ports before it changes to another UID.
    - tor-gencert creates all files as readable to the file creator only, and
      write-protects the authority identity key.

  o Minor features (directory authority):
    - Fail quickly and (relatively) harmlessly if we generate a network
      status document that is somehow malformed.

  o Deprecated features:
    - RedirectExits is now deprecated.

  o Minor feature (controller):
    - You can now use the ControlSocket option to tell Tor to listen for
      controller connections on Unix domain sockets on systems that support
      them.  (Patch from Peter Palfrader.)

  o Minor bugfixes (directory):
    - Fix another crash bug related to extra-info caching.  (Bug found by
      Peter Palfrader.) [Bugfix on 0.2.0.2-alpha]
    - Directories no longer return a "304 not modified" when they don't
      have the networkstatus the client asked for. Also fix a memory
      leak when returning 304 not modified. [Bugfixes on 0.2.0.2-alpha]

  o Minor bugfixes (dns):
    - Fix a crash when DNSPort is set more than once. (Patch from Robert
      Hogan.) [Bugfix on 0.2.0.2-alpha]
    - Add DNSPort connections to the global connection list, so that we
      can time them out correctly. (Bug found by mwenge) [Bugfix on
      0.2.0.2-alpha]

  o Minor bugfixes (hidden services):
    - Stop tearing down the whole circuit when the user asks for a
      connection to a port that the hidden service didn't configure.
      Resolves bug 444.  [Bugfix on 0.1.2.x]

  o Minor bugfixes (versioning):
    - Stop under-counting the number of authorities that recommend each
      version. [Bugfix on 0.1.2.x]


Changes in version 0.2.0.2-alpha - 2007-06-02
  o Major bugfixes on 0.2.0.1-alpha:
    - Fix an assertion failure related to servers without extra-info digests.
      Resolves bugs 441 and 442.

  o Minor features (directory):
    - Support "If-Modified-Since" when answering HTTP requests for